--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server -d --env.platform=default --progress --hot",
+    "documentation:build": "documentation build src/** -f html -o docs",
+    "documentation:serve": "documentation serve --watch src/**",
     "build": "NODE_ENV=production webpack -p --progress --colors"
   },
   "repository": {
@@ -26,6 +28,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.7",
+    "documentation": "^5.3.3",
     "eslint": "^4.12.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-loader": "^1.9.0",
